Delmar/force-app/main/default/objects/DEL_ExceptionLog__c/DEL_ExceptionLog__c.object-meta.xml
<CustomObject>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>