Delmar/force-app/main/default/objects/DEL_ExceptionLog__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Name of the class in which exception has occurred.</description>
    <inlineHelpText>Name of the class in which exception has occurred.</inlineHelpText>
    <label>Class Name</label>
    <type>TextArea</type>
</CustomField>