Delmar/force-app/main/default/objects/DEL_ExceptionLog__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>Specifies the type of exception that has occurred.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>