Delmar/force-app/main/default/objects/DEL_ExceptionLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Name of the method in which exception has occurred.</description>
    <inlineHelpText>Name of the method in which exception has occurred.</inlineHelpText>
    <label>Method Name</label>
    <type>TextArea</type>
</CustomField>